<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cours.Activity_C">
<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true">

    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap1_C"/>

    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap2_C"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap3_C"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap4_C" />
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap5_C"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap6_C"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap7_C"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/burlyWood"
        android:text="@string/Chap8_C"
        android:textColor="@color/white"
        android:textStyle="bold"/>

</GridLayout>
</ScrollView>