<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".cours.Activity_JS"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<GridLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:padding="4dp"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:rowOrderPreserved="false"
    android:useDefaultMargins="true">

    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap1_JS"/>

    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap2_JS"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap3_JS"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap4_JS" />
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_5"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap5_JS"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap6_JS"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_7"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/Chap7_JS"/>
    <Button
        android:onClick="lireChapitre"
        android:id="@+id/btn_8"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/Chap8_JS"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</GridLayout>
</ScrollView>