<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white_smoke"
    android:padding="10dp">


    <ImageView
        android:focusable="false"
        android:id="@+id/item_img_fv_cours"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/c_php"
        android:background="@color/white"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/imagecours" />

    <RelativeLayout
        android:elevation="20dp"
        android:layout_width="232dp"
        android:layout_height="70dp"
        android:background="@color/white">

        <TextView
            android:focusable="false"
            android:id="@+id/nomfavoriscours"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="@string/nomfavoricours"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_alignParentLeft="true" />

        <Button
            android:focusable="false"
            android:id="@+id/btn_sup_fav_cours"
            android:layout_width="100dp"
            android:layout_height="38dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/supprimer"
            android:textSize="10dp"
            android:layout_alignParentRight="true" />

    </RelativeLayout>
</LinearLayout>