<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/white_smoke"
    android:padding="10dp">


    <ImageView
        android:id="@+id/item_img"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_weight="5"
        app:srcCompat="@drawable/c_php"
        android:background="@color/white"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/imagecours" />

    <RelativeLayout
        android:layout_width="232dp"
        android:layout_height="70dp"
        android:background="@color/white">

        <ImageButton
            android:background="@color/white"
            android:id="@+id/imageButtonDelete"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_delete_black_24dp"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/datequizz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="15dp"
            android:text="@string/date"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/scorequizz"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/imageButtonDelete"
            android:layout_weight="1"
            android:text="@string/scorequizz"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_toLeftOf="@+id/imageButtonDelete" />

        <TextView
            android:id="@+id/niveau_quizz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="Niveau"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_alignParentLeft="true" />

    </RelativeLayout>
</LinearLayout>