<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".quizz.Quizz_Confirm">
    <GridLayout
        android:id="@+id/relativelayoutConfirm"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:padding="4dp"
        android:alignmentMode="alignBounds"
        android:columnCount="2"
        android:rowOrderPreserved="false"
        android:useDefaultMargins="true"
        >
        <Button
            android:id="@+id/btn_niveau1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/niveau1"/>

        <Button
            android:id="@+id/btn_niveau2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/niveau2"/>
        <Button
            android:id="@+id/btn_niveau3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/niveau3"/>
        <ImageButton
            android:src="@drawable/ic_lock_black_24dp"
            android:id="@+id/btn_niveau4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"
            android:background="@color/dark_red"/>
        <ImageButton
            android:src="@drawable/ic_lock_black_24dp"
            android:id="@+id/btn_niveau5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"
            android:background="@color/dark_red"/>
        <ImageButton
            android:src="@drawable/ic_lock_black_24dp"
            android:id="@+id/btn_niveau6"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"
            android:background="@color/dark_red"/>
        <ImageButton
            android:src="@drawable/ic_lock_black_24dp"
            android:id="@+id/btn_niveau7"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"
            android:background="@color/dark_red"/>
        <ImageButton
            android:src="@drawable/ic_lock_black_24dp"
            android:id="@+id/btn_niveau8"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:textStyle="bold"
            android:background="@color/dark_red"/>

    </GridLayout>
</ScrollView>
